objects/Download__kav.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>About</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Chat_Text__c</fullName>
        <inlineHelpText>This information will be used by Client Services Agents to share instructions with clients during chat sessions. Please enter short, descriptive, chat-friendly text. Typically used for a "list of steps" or "list of instructions".</inlineHelpText>
        <label>Chat Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Download_File__c</fullName>
        <label>Download File</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Internal_Information__c</fullName>
        <inlineHelpText>This field is for Knowledge Administrators.</inlineHelpText>
        <label>Internal Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_ID__c</fullName>
        <label>Page ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Article__c</fullName>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Links to documents in SF or Cvent.</description>
    <label>Download</label>
    <pluralLabel>Downloads</pluralLabel>
</CustomObject>